Add missing "test" perfetto category

Fixes: QTBUG-138385
Change-Id: I27aa76be437b5cd1df51acfe90fb4235b7181646
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/660958
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
(cherry picked from commit 79438a85083a5dce41accf67d70989498fd7c21f)
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/660940
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>